--- a/index.html
+++ b/index.html
@@ -5,12 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hacker Snooze</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    
-
+    <div id="header">
+        <h1 id="title">Hacker News
+            <small id="secondHeader" class="text-muted">Top Stories</small>
+        </h1>
+    </div>
+    <div id="navBar">
+        <ul class="nav">
+            <li class="nav-item">
+              <a id="navTop" class="nav-link link-secondary active" aria-current="page" href="#">Top Stories</a>
+            </li>
+            <li class="nav-item">
+              <a id="navAsk" class="nav-link link-secondary" href="#">Ask</a>
+            </li>
+          </ul>
+    </div>
+    <br>
+    <div id="topStories">
+        <div id="stories">
+        </div>
+        <div id="commentList" class="none">
+        </div>
+        <div id="buttonDiv" class="d-grid gap-2 col-6 mx-auto">
+            <button id="loadMore" class="btn btn-secondary" type="button">Load More</button>
+        </div>
+        <div id="comments" class="d-grid gap-2 col-6 mx-auto none">
+            <button id="goBack" class="btn btn-secondary" type="button">Go Back</button>
+        </div>
+    </div>
+    <div id="latestAsk" class="none">
+        <div id="askList">
+        </div>
+        <div id="askCommentList" class="none">
+        </div>
+        <div id="askButtonDiv" class="d-grid gap-2 col-6 mx-auto">
+            <button id="loadMore1" class="btn btn-secondary" type="button">Load More</button>
+        </div>
+        <div id="askComments" class="d-grid gap-2 col-6 mx-auto none">
+            <button id="goBack1" class="btn btn-secondary" type="button">Go Back</button>
+        </div>
+    </div>
+    <nav id="infoBottom" class="navbar sticky-bottom">
+        <div class="container-fluid">
+        <a>Title is Link to Story.</a>
+        <a>Click comments to view Comments.</a>
+        </div>
+    </nav>
     <script src="main.js"></script>
 </body>
 </html>
